# cpm_demo

./: .gitignore  CMakeLists.txt  conanfile.py  conanprofile_linux  conanprofile_mac  conanprofile_win  default.nix  flake.nix  main.cpp
.github/: dependabot.yml
.github/workflows/: linux.yml  linux_conan.yml  macos.yml  macos_conan.yml  windows.yml  windows_conan.yml
conan/: linux  mac
nix/: etl.nix  ut.nix
